fix(server): add ability to configure listen-host to be able to listen for local use on localhost and for docker use on 0.0.0.0

--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,7 @@ logging:
 #static mode for serve from a static file. Online mode to catch online the mock configuration
 mode: "static"
 port: 8080
+listenHost: "0.0.0.0"
 postman:
   token: ""
   url: "https://api.getpostman.com/"
